Enable joystick support

--- a/com.realm667.WolfenDoom_Blade_of_Agony.yaml
+++ b/com.realm667.WolfenDoom_Blade_of_Agony.yaml
@@ -5,7 +5,7 @@ runtime-version: '18.08'
 command: gzdoom.sh
 rename-icon: m_doom
 finish-args:
-- --device=dri
+- --device=all
 - --socket=wayland
 - --socket=x11
 - --share=ipc
